# auton8-smart-recorder

./: .dockerignore  .env.example  .gitignore  CLAUDE_COMMAND_ENHANCEMENT_PROMPT.md  CLAUDE_ENHANCEMENT_PROMPT.md  CLAUDE_PROMPT.txt  DEMO_GUIDE.md  Dockerfile  FINAL_STEPS.md  HOW_TO_USE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  INSTALL_GUIDE.md  INTEGRATION_COMPLETE.md  ML_APP_GUIDE.md  ML_FEATURES_GUIDE.md  PROGRESS_REPORT.md  QUICKSTART.md  QUICK_START.md  README.md  README_PRODUCTION.md  RECORD_NEW_WORKFLOW.md  REPO_FINDINGS.md  START_HERE.md  TESTING_GUIDE.md  check_status.ps1  demo_ml_features.py  docker-compose.yml  install.bat  install.sh  pyproject.toml  recorded_test.json  recorded_test.py  requirements-audio.txt  requirements-core.txt  requirements-minimal.txt  requirements-ml-advanced.txt  requirements-server.txt  requirements.txt  (+5 more)
data/: settings.json  variables.json
data/workflows/: .gitkeep  demo-saucedemo-healing.json  demo-saucedemo-login.json  google-search-test.json  test-0dea4538-8a75-4b0e-8073-0b3bfcdf5613.json  test-1e5daf7e-3a79-4d28-8f6c-9bd16d3a92ea.json  test-2f622ab3-e426-462c-bed1-d6599150b4ae.json  test-4eea19a1-3d4b-4255-8a21-4c65fa2e371d.json  test-509f36f0-7af6-4fee-b4dd-bae003dc3404.json  test-7d243432-9b43-4182-8804-574cef68e15b.json  test-9bfcde11-f970-4074-b3d9-95d7317d8915.json  test-bbf7e672-4e7e-424e-b20d-86939f43536c.json  test-e447512a-f822-4e5f-83f2-5e636e4b5d00.json  test_config_workflow_temp.json
docs/: ASSERTIONS.md  architecture-diagram.html
examples/: variable_sharing_example.py
instrumentation/: injected.js  injected_advanced.js
recorder/: app.py  app_enhanced.py  app_ml_integrated.py
recorder/api/: __init__.py  database.py  main.py
recorder/audio/: __init__.py  transcription_engine.py
recorder/ml/: __init__.py  healing_engine.py  llm_engine.py  nlp_engine.py  ollama_engine.py  rag_engine.py  selector_engine.py  vision_engine.py
recorder/schema/: enhanced.py  workflow.py
recorder/services/: __init__.py  browser_launcher.py  expression_engine.py  global_variable_registry.py  migration.py  replay_launcher.py  stable_replay.py  suite_runner.py  ws_server.py  (+1 more)
replay/: __init__.py  replayer.py
tests/: test_smoke.py
ui/: main.qml  main_enhanced.qml  main_professional.qml
(+39 files in other folders)
