[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "auton8-recorder"
version = "1.0.0"
description = "Browser automation recorder with ML-powered self-healing replay"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["browser", "automation", "testing", "recorder", "playwright", "ml", "self-healing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

# Minimal deps only - tester machines install just this
dependencies = [
    "PySide6>=6.6.0",
    "websockets>=12.0",
    "pydantic>=2.10.0",
    "playwright>=1.47.0",
    "numpy>=1.26.3",
]

[project.optional-dependencies]
ml-core = [
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.3",
    "opencv-python>=4.9.0",
    "nltk>=3.8.1",
    "rapidfuzz>=3.6.1",
    "imagehash>=4.3.1",
]
ml-advanced = [
    "torch>=2.1.0",
    "transformers>=4.36.2",
    "sentence-transformers>=2.3.1",
    "faiss-cpu>=1.7.4",
    "spacy>=3.7.2",
]
audio = [
    "librosa>=0.10.1",
    "openai-whisper>=20231117",
    "noisereduce>=3.0.0",
]
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "sqlalchemy>=2.0.25",
]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]
# Install everything for the central server
full = [
    "auton8-recorder[ml-core,ml-advanced,audio,server]",
]

[project.scripts]
auton8-recorder = "recorder.app_enhanced:main"
auton8-server = "recorder.api.main:start"

[tool.setuptools.packages.find]
include = ["recorder*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
recorder = ["../ui/*.qml", "../ui/components/*.qml", "../instrumentation/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
